# AndroidTestDemo

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/dlib/include/: any.h  bayes_utils.h  bridge.h  bsp.h  disjoint_subsets.h  graph_utils.h  hash.h  iosockstream.h  matrix.h  optimization.h  quantum_computing.h  set_utils.h  sockstreambuf.h  sparse_vector.h  statistics.h  string.h  svm.h  svm_threaded.h  timeout.h  timer.h  tuple.h  unicode.h  vectorstream.h
app/src/main/java/com/example/myapplication/: DlibFaceDetector.java  MainActivity.kt  MediaPlayerActivity.kt  PlayerActivity.kt  SecondActivity.java
app/src/main/res/layout/: activity_main.xml  activity_media_player.xml  activity_player.xml  activity_second.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
